syntax = "proto3";

option java_package = "com.piggy.microservice.account.grpc";
option java_outer_classname = "AccountProto";
option java_multiple_files = false;

import "auth.proto";
import "statistics.proto";

service AccountService {
  rpc GetAccountByName(GetAccountRequest) returns (GetAccountResponse);
  rpc SaveCurrentAccount(SaveAccountRequest) returns (SuccessMessage);
  rpc CreateNewAccount(CreateAccountRequest) returns (GetAccountResponse);
}

message Account {
  string name = 1;
  repeated Item incomes = 3;
  repeated Item expenses = 4;
  Saving saving = 5;
  string note =6;
}

message GetAccountRequest {
  string name = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message SaveAccountRequest {
  string accountName = 1;
  repeated Item incomes = 2;
  repeated Item expenses = 3;
  Saving saving = 4;
}

message CreateAccountRequest {
  string username = 1;
  string password = 2;
}

message SuccessMessage{
  string successMessage = 1;
}

